# fastmcp-reference

./: .gitignore  CLAUDE.md  README.md
examples/: README.md
examples/example_server/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  server.py
examples/example_server/tests/: __init__.py  conftest.py  test_file_tools.py  test_web_tools.py
examples/example_server/tools/: __init__.py  file_tools.py  web_tools.py
examples/mcp_server_core/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/mcp_server_core/mcp_server_core/: __init__.py  config.py  exceptions.py  logging.py  server.py
examples/mcp_server_core/mcp_server_core/abstractions/: __init__.py  file_ops.py  url_fetcher.py
examples/mcp_server_core/mcp_server_core/middleware/: __init__.py  audit.py  rate_limit.py
examples/mcp_server_core/tests/: __init__.py  conftest.py  test_audit.py  test_config.py  test_exceptions.py  test_file_ops.py  test_logging.py  test_server.py  test_url_fetcher.py
examples/observability/: README.md  health_check.py  otel_integration.py  prometheus_integration.py
reference/: fastmcp-architecture-research-references.md  fastmcp-builtin-features.md  fastmcp-executive-summary.md  fastmcp-patterns-anti-patterns.md  fastmcp-technical-architecture.md
